// Copyright (c) Ultraviolet
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

import "google/protobuf/empty.proto";
package manager;

option go_package = "./manager";

service ManagerService {
  rpc Run(RunRequest) returns (RunResponse) {}
  rpc Status(google.protobuf.Empty) returns (StatusResponse) {}
}

message RunRequest {
  Computation computation = 1;
  string ca_certs = 2;
  bool client_tls = 3;
  string timeout = 4;
}

message Computation {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated Dataset datasets = 4;
  repeated Algorithm algorithms = 5;
  repeated string result_consumers = 6;
  string timeout = 7;
}

message Dataset {
  string provider = 1;
  string id = 2;
}

message Algorithm {
  string provider = 1;
  string id = 2;
}

message RunResponse { }
